Changed some layout

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/App.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/App.xaml
@@ -11,11 +11,16 @@
                 <Setter Property="FontAttributes" Value="Bold"></Setter>
             </Style>
             
-            <!-- Header03 -->
-            <Style x:Key="H03" TargetType="Label">
-                <Setter Property="FontSize" Value="22"></Setter>
+            <!-- Header04 -->
+            <Style x:Key="H04" TargetType="Label">
+                <Setter Property="FontSize" Value="20"></Setter>
             </Style>
             
+            <!-- Header05 -->
+            <Style x:Key="H05" TargetType="Label">
+                <Setter Property="FontSize" Value="20"></Setter>
+            </Style>
+
             <!-- PrimaryBtn -->
             <Style x:Key="PrimaryBtn" TargetType="Button">
                 <Setter Property="FontSize" Value="20"></Setter>
