--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Start/RegistrationKey.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Start/RegistrationKey.xaml
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SurvivalBox.Views.RegistrationKey"
-             Title="Registration Key">
-    <ContentPage.Content>
+             x:Class="SurvivalBox.Views.Start.RegistrationKey"
+             xmlns:vm="clr-namespace:SurvivalBox.ViewModels.Start"
+             Title="{Binding Title}">
+    <ContentPage.BindingContext>
+        <vm:RegistrationKeyVM></vm:RegistrationKeyVM>
+    </ContentPage.BindingContext>
 
+    <ContentPage.Content>
         <StackLayout Padding="20,10,20,50">
 
             <StackLayout VerticalOptions="Start">
                 <Label Text="Welcome" Margin="0,0,0,25" HorizontalOptions="Center" VerticalOptions="Start" Style="{StaticResource H01}"/>
-                <Label Text="Please enter your Registration Key below." Margin="0,0,0,10" Style="{StaticResource H05}"/>
+                <Label Text="Please enter the Registration Key from your SurvivalBox below." Margin="0,0,0,10" Style="{StaticResource H04}"/>
             </StackLayout>
 
             <StackLayout VerticalOptions="CenterAndExpand">
@@ -17,15 +21,14 @@
             </StackLayout>
 
             <StackLayout VerticalOptions="End">
-                <Button x:Name="ActivateBtn" Text="Activate" Clicked="ActivateBtn_OnClicked" HorizontalOptions="Center" VerticalOptions="End" HeightRequest="50" WidthRequest="125" Margin="0,0,0,10" Style="{StaticResource PrimaryBtn}"/>
+                <Button x:Name="ActivateBtn" Text="Activate" Command="{Binding ValidateRegKeyCmd}" HorizontalOptions="Center" VerticalOptions="End" HeightRequest="50" WidthRequest="125" Margin="0,0,0,10" Style="{StaticResource PrimaryBtn}"/>
                 <Label x:Name="GotAccountLbl" Text="Already got an account?" HorizontalOptions="Center" VerticalOptions="End" Style="{StaticResource LinkLbl}">
                     <Label.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped" NumberOfTapsRequired="1"></TapGestureRecognizer>
+                        <TapGestureRecognizer Command="{Binding LogInCmd}"></TapGestureRecognizer>
                     </Label.GestureRecognizers>
                 </Label>
             </StackLayout>
-
+            
         </StackLayout>
-
     </ContentPage.Content>
 </ContentPage>
