Finished Start UI

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/App.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/App.xaml
@@ -10,12 +10,16 @@
 	        <Style x:Key="H01" TargetType="Label">
                 <Setter Property="FontSize" Value="40"></Setter>
                 <Setter Property="HorizontalTextAlignment" Value="Center"></Setter>
+	            <!-- HACK: https://stackoverflow.com/questions/43147929/xamarin-label-losing-text-alignment-when-page-returned-to -->
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
             </Style>
 
 	        <!-- Header04 -->
 	        <Style x:Key="H04" TargetType="Label">
 	            <Setter Property="FontSize" Value="20"></Setter>
 	            <Setter Property="HorizontalTextAlignment" Value="Center"></Setter>
+	            <!-- HACK: https://stackoverflow.com/questions/43147929/xamarin-label-losing-text-alignment-when-page-returned-to -->
+	            <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
             </Style>
 
 	        <!-- PrimaryBtn -->
