--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/PasswordReset.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/PasswordReset.xaml
@@ -5,5 +5,19 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SurvivalBox.Views.PasswordReset"
              Title="Password Reset">
-  
+
+    <StackLayout Padding="20,10,20,50">
+
+        <StackLayout VerticalOptions="StartAndExpand" Spacing="15">
+            <Label Text="Password Reset" Margin="0,0,0,10" VerticalOptions="Start" Style="{StaticResource H01}"/>
+            <Label Text="Please enter your E-Mail for resetting your passwort." Style="{StaticResource H04}"/>
+            <Entry Text="{Binding EMailValue}" Placeholder="E-Mail" WidthRequest="300" HorizontalOptions="Center"/>
+        </StackLayout>
+
+        <StackLayout VerticalOptions="End">
+            <Button Text="Reset Password" Command="{Binding ResetPasswordCommand}" Style="{StaticResource PrimaryBtn}" HorizontalOptions="Center"/>
+        </StackLayout>
+
+    </StackLayout>
+
 </ContentPage>
