Added MasterDetail view

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/CreateAccount.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/CreateAccount.xaml
@@ -9,10 +9,10 @@
     <StackLayout Padding="20,10,20,50">
 
         <StackLayout VerticalOptions="StartAndExpand">
-            <Label Text="Account Creation" Margin="0,0,0,25" HorizontalOptions="Center" VerticalOptions="Start" Style="{StaticResource H01}"/>
-            <Label Text="Create your SurvivalBox Account." Margin="0,0,0,15" Style="{StaticResource H04}"/>
+            <Label Text="Account Creation" Margin="0,0,0,25" HorizontalOptions="Center" VerticalOptions="Start" Style="{DynamicResource TitleStyle}"/>
+            <Label Text="Create your SurvivalBox Account." Margin="0,0,0,15" HorizontalTextAlignment="Center" Style="{DynamicResource SubtitleStyle}"/>
 
-            <StackLayout Spacing="25">
+            <StackLayout Spacing="10">
                 <Entry Text="{Binding EMailText}" Placeholder="E-mail" WidthRequest="300" HorizontalOptions="Center"/>
 
                 <Entry Text="{Binding PasswordText}" IsPassword="True" Placeholder="Password" WidthRequest="300" HorizontalOptions="Center"/>
