--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/PasswordReset.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/PasswordReset.xaml
@@ -9,8 +9,8 @@
     <StackLayout Padding="20,10,20,50">
 
         <StackLayout VerticalOptions="StartAndExpand" Spacing="15">
-            <Label Text="Password Reset" Margin="0,0,0,10" VerticalOptions="Start" Style="{StaticResource H01}"/>
-            <Label Text="Please enter your E-Mail for resetting your passwort." Style="{StaticResource H04}"/>
+            <Label Text="Password Reset" Margin="0,0,0,10" VerticalOptions="Start" Style="{DynamicResource TitleStyle}" HorizontalTextAlignment="Center"/>
+            <Label Text="Please enter your E-Mail for resetting your passwort." HorizontalTextAlignment="Center" Style="{DynamicResource SubtitleStyle}"/>
             <Entry Text="{Binding EMailValue}" Placeholder="E-Mail" WidthRequest="300" HorizontalOptions="Center"/>
         </StackLayout>
 
