--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/WelcomeCarousel.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/WelcomeCarousel.xaml
@@ -7,8 +7,8 @@
     <ContentPage>
         <StackLayout Padding="20,10,20,50">
             <StackLayout VerticalOptions="StartAndExpand">
-                <Label Style="{StaticResource H01}" Margin="0,0,0,25" >App info 1</Label>
-                <Label HorizontalTextAlignment="Center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
+                <Label Style="{DynamicResource TitleStyle}" Margin="0,0,0,25" HorizontalTextAlignment="Center">App info 1</Label>
+                <Label HorizontalTextAlignment="Center" Style="{DynamicResource SubtitleStyle}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
             </StackLayout>
         </StackLayout>
     </ContentPage>
@@ -16,8 +16,8 @@
     <ContentPage>
         <StackLayout Padding="20,10,20,50">
             <StackLayout VerticalOptions="StartAndExpand">
-                <Label Style="{StaticResource H01}" Margin="0,0,0,25">App info 2</Label>
-                <Label HorizontalTextAlignment="Center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
+                <Label Style="{DynamicResource TitleStyle}" Margin="0,0,0,25" HorizontalTextAlignment="Center">App info 2</Label>
+                <Label HorizontalTextAlignment="Center" Style="{DynamicResource SubtitleStyle}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
             </StackLayout>
         </StackLayout>
     </ContentPage>
@@ -25,8 +25,8 @@
     <ContentPage>
         <StackLayout Padding="20,10,20,50">
             <StackLayout VerticalOptions="StartAndExpand">
-                <Label Style="{StaticResource H01}" Margin="0,0,0,25">App info 3</Label>
-                <Label HorizontalTextAlignment="Center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
+                <Label Style="{DynamicResource TitleStyle}" Margin="0,0,0,25" HorizontalTextAlignment="Center">App info 3</Label>
+                <Label HorizontalTextAlignment="Center" Style="{DynamicResource SubtitleStyle}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est sapien, ultrices ac maximus sit amet, ullamcorper eu magna. Cras eu consectetur sem. Quisque id elit diam. Curabitur nec tincidunt.</Label>
             </StackLayout>
 
             <Button Command="{Binding GetStartedCommand}" Style="{StaticResource PrimaryBtn}" VerticalOptions="End" Text="Get Started" HorizontalOptions="Center"></Button>
