--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTodoItem.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTodoItem.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SurvivalBox.Views.MainDetail01">
-    <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
-        <Label Text="Sample Detail page!" Style="{DynamicResource SubtitleStyle}" VerticalOptions="Center" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+             x:Class="SurvivalBox.Views.MainTodoItem">
+    <StackLayout>
+        <Label Text="Sample TodoItem Page!" Style="{DynamicResource SubtitleStyle}" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center"></Label>
     </StackLayout>
 </ContentPage>
