--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTodoItem.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTodoItem.xaml
@@ -4,11 +4,8 @@
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              xmlns:b="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SurvivalBox.Views.MainTodoItem">
-    <!--<ContentPage.Behaviors>
-        <b:EventToCommandBehavior EventName="OnAppearing"
-                                  Command="{Binding AppearingCommand}" />
-    </ContentPage.Behaviors>-->
+             x:Class="SurvivalBox.Views.MainTodoItem"
+             x:Name="Page">
 
     <Grid RowSpacing="0">
         <Grid.RowDefinitions>
@@ -16,10 +13,9 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="False" IsEnabled="True" />
+        <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding ActivityIndicatorIsActive}" IsRunning="{Binding ActivityIndicatorIsActive}" IsEnabled="True" />
 
         <StackLayout Grid.Row="0" BackgroundColor="#5ABAFF" Padding="10,30,10,5">
-            <Label TextColor="#555555" Text="Azure App Service" />
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
@@ -46,7 +42,7 @@
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.ContextActions>
-                            <MenuItem Command="{Binding CompleteCommand}" Text="Complete" CommandParameter="{Binding .}" />
+                            <MenuItem Command="{Binding Path=BindingContext.CompleteCommand, Source={x:Reference Page}}" Text="Complete" CommandParameter="{Binding .}" />
                         </ViewCell.ContextActions>
                         <StackLayout HorizontalOptions="StartAndExpand" Orientation="Horizontal" Padding="15,5,0,0">
                             <StackLayout Padding="5,0,0,0" VerticalOptions="StartAndExpand" Orientation="Vertical">
