Added Home and Weather View

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Main.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Main.xaml
@@ -60,7 +60,7 @@
     <MasterDetailPage.Detail>
         <NavigationPage>
             <x:Arguments>
-                <views:MainSample></views:MainSample>
+                <views:MainHome></views:MainHome>
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
