--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWeather.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWeather.xaml
@@ -15,11 +15,17 @@
 
         <ActivityIndicator Grid.RowSpan="2" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding ActivityIndicatorIsActive, Mode=TwoWay}" IsRunning="{Binding ActivityIndicatorIsActive, Mode=TwoWay}" IsEnabled="True" />
 
-        <Grid Grid.Row="0">
-            <Switch></Switch>
+        <Grid Grid.Row="0" Padding="20,10,20,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Switch Grid.Column="0" HorizontalOptions="End" VerticalOptions="Center"></Switch>
+            <Button Grid.Column="1" VerticalOptions="Center" Text="Change Sorting"></Button>
         </Grid>
 
-        <ListView Grid.Row="1"  VerticalOptions="FillAndExpand" HasUnevenRows="True" IsPullToRefreshEnabled="True" ItemsSource="{Binding WeatherProperties}">
+        <ListView Margin="0,10,0,0" Grid.Row="1"  VerticalOptions="FillAndExpand" HasUnevenRows="True" IsPullToRefreshEnabled="True" ItemsSource="{Binding WeatherProperties}">
             <ListView.Behaviors>
                 <b:EventToCommandBehavior EventName="Refreshing"
                                           Command="{Binding RefreshingCommand}" />
