--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWeather.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWeather.xaml
@@ -20,12 +20,16 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-
-            <Switch Grid.Column="0" HorizontalOptions="End" VerticalOptions="Center"></Switch>
-            <Button Grid.Column="1" VerticalOptions="Center" Text="Change Sorting"></Button>
+            <Label Grid.Column="0" Text="Use Metric Units" HorizontalOptions="End" HorizontalTextAlignment="End" Style="{DynamicResource SubtitleStyle}"></Label>
+            <Switch Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" IsToggled="{Binding UseMetricUnits, Mode=TwoWay}">
+                <Switch.Behaviors>
+                    <b:EventToCommandBehavior EventName="Toggled"
+                                              Command="{Binding UnitsToggledCommand}"></b:EventToCommandBehavior>
+                </Switch.Behaviors>
+            </Switch>
         </Grid>
 
-        <ListView Margin="0,10,0,0" Grid.Row="1"  VerticalOptions="FillAndExpand" HasUnevenRows="True" IsPullToRefreshEnabled="True" ItemsSource="{Binding WeatherProperties}">
+        <ListView Margin="0,10,0,0" Grid.Row="1"  VerticalOptions="FillAndExpand" HasUnevenRows="True" IsRefreshing="{Binding IsRefreshing}" IsPullToRefreshEnabled="True" ItemsSource="{Binding WeatherProperties}">
             <ListView.Behaviors>
                 <b:EventToCommandBehavior EventName="Refreshing"
                                           Command="{Binding RefreshingCommand}" />
@@ -34,7 +38,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Margin="0,0,0,10">
+                        <StackLayout Margin="15,0,0,10">
                             <Label Text="{Binding Title}" Style="{DynamicResource TitleStyle}" />
                             <Label Text="{Binding Content}" Style="{DynamicResource SubtitleStyle}" />
                         </StackLayout>
