--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWarnings.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainWarnings.xaml
@@ -11,7 +11,7 @@
           <RowDefinition Height="*"></RowDefinition>
       </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Padding="20,10,20,0">
+        <Grid Grid.Row="0" Padding="20,10,20,0" BackgroundColor="LightGray">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
